--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,9 @@
 (library
  (name ocamlisp)
- (modes byte native)
- (flags (:standard -w -39)))
+ (modes byte native))
+
+(env
+ (dev
+  (flags (:standard -w +42)))
+ (release
+  (ocamlopt_flags (:standard -O3))))
