Update project info

--- a/mlisp.opam
+++ b/mlisp.opam
@@ -4,7 +4,7 @@ synopsis: "A Lisp implementation in OCaml"
 description: "A Lisp implementation in OCaml"
 maintainer: ["Muqiu Han"]
 authors: ["Muqiu Han"]
-license: "AGPL-v3"
+license: "AGPL-3.0-only"
 tags: ["lisp" "interpreter" "compiler"]
 homepage: "https://github.com/muqiuhan/MLisp"
 doc: "https://github.com/muqiuhan/MLisp"
