built-in standard library

--- a/lib/dune
+++ b/lib/dune
@@ -1,10 +1,4 @@
 (library
  (name mlisp)
  (modes byte native)
- (libraries camlp-streams ocolor))
-
-(env
- (dev
-  (flags (:standard -w -42)))
- (release
-  (ocamlopt_flags (:standard -O3))))
+ (libraries camlp-streams ocolor mlisp_stdlib))
