--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name mlisp)
  (modes byte native)
- (libraries camlp-streams ocolor mlisp_stdlib))
+ (libraries core mlisp_utils mlisp_repl mlisp_stdlib))
