feat: add record syntax, new operator

--- a/lib/primitives/dune
+++ b/lib/primitives/dune
@@ -1,3 +1,3 @@
 (library
  (name mlisp_primitives)
- (libraries core mlisp_object mlisp_error))
+ (libraries core mlisp_object mlisp_error mlisp_eval mlisp_print))
