feat(object): add RestParam variant to lobject type for variadic macros
Add RestParam variant to lobject type to represent &rest parameters in
macro definitions. Also update pattern matches in ast.ml to handle the
new variant.

--- a/lib/primitives/dune
+++ b/lib/primitives/dune
@@ -2,4 +2,10 @@
  (name mlisp_primitives)
  (preprocess
   (pps ppx_string))
- (libraries core mlisp_object mlisp_error mlisp_eval mlisp_print mlisp_module_cache))
+ (libraries
+  core
+  mlisp_object
+  mlisp_error
+  mlisp_eval
+  mlisp_print
+  mlisp_module_cache))
