fix(vscode-ext): fix OCaml compilation errors
- Fix vscode_mlisp.ml: Use Js_of_ocaml.Js.export with wrap_callback instead of Ojs.fun_to_js_args for VSCode exports
- Fix vscode_mlisp.ml: Change activate return type from O.t to unit to match wrap_callback expectations
- Add deactivate function and export for proper VSCode extension lifecycle
- Update vscode_mlisp.mli: Update signatures to match implementation
- Fix module references: Use Vscode_bindings.Vscode directly instead of open
- Update dune-project: Replace jsonoo with yojson dependency
- Update dune files: Fix library dependencies (use ojs instead of gen_js_api directly)

--- a/packages/vscode-ext/dune-project
+++ b/packages/vscode-ext/dune-project
@@ -8,12 +8,14 @@
 (package
  (name vscode-mlisp)
  (synopsis "VSCode extension for MLisp")
+ (allow_empty)
  (depends
   (ocaml (>= 5.0))
   (js_of_ocaml (>= 6.0))
   (gen_js_api (= 1.1.6))
+  (ojs (= 1.1.6))
   (mlisp (>= 0.0.44))
   (promise_jsoo (>= 0.4.3))
-  (jsonoo (>= 0.3))
+  (yojson (>= 0.3))
   (ocaml-version (>= 4.0))
   (ppxlib (>= 0.36))))
