--- a/packages/vscode-ext/src/dune
+++ b/packages/vscode-ext/src/dune
@@ -1,8 +1,6 @@
 (executable
  (name vscode_mlisp)
- (public_name vscode_mlisp.bc)
- (modules vscode_mlisp)
- (libraries vscode_bindings js_of_ocaml)
- (js_of_ocaml)
- (preprocess (pps gen_js_api))
- (modes js))
+ (modes js)
+ (libraries vscode_bindings ojs js_of_ocaml)
+ (preprocess (pps gen_js_api.ppx))
+ (js_of_ocaml))
