--- a/packages/vscode-ext/package.json
+++ b/packages/vscode-ext/package.json
@@ -53,5 +53,9 @@
     "@biomejs/biome": "^1.8.0",
     "esbuild": "^0.20.0",
     "@vscode/vsce": "^2.24.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/somhairle/mlisp"
   }
 }
