--- a/packages/vscode-ext/package.json
+++ b/packages/vscode-ext/package.json
@@ -45,14 +45,20 @@
   "scripts": {
     "check": "biome check",
     "fix": "biome check --fix",
+    "build:ocaml": "dune build",
+    "watch:ocaml": "dune build -w",
     "bundle": "esbuild _build/default/src/vscode_mlisp.bc.js --bundle --external:vscode --minify --outdir=dist --platform=node --target=node18",
+    "watch:bundle": "esbuild _build/default/src/vscode_mlisp.bc.js --bundle --external:vscode --outdir=dist --platform=node --target=node18 --watch",
+    "dev": "npm-run-all --parallel watch:ocaml watch:bundle",
+    "build": "npm-run-all build:ocaml bundle",
     "package": "vsce package --out mlisp-vscode.vsix",
     "install:ext": "code --force --install-extension mlisp-vscode.vsix"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
     "esbuild": "^0.20.0",
-    "@vscode/vsce": "^2.24.0"
+    "@vscode/vsce": "^2.24.0",
+    "npm-run-all": "^4.1.5"
   },
   "repository": {
     "type": "git",
