docs(vscode-ext): add comprehensive release documentation
- Add detailed README with features, installation, usage, screenshots placeholders
- Add CHANGELOG.md with version history and release notes format
- Add DEVELOPMENT.md with build pipeline, architecture, and contribution guide
- Update package.json with marketplace metadata (keywords, license, bugs, homepage)
- Update root README.md with VSCode extension section in Table of Contents
- Document unique OCaml-to-JavaScript architecture for future contributors

--- a/packages/vscode-ext/package.json
+++ b/packages/vscode-ext/package.json
@@ -1,13 +1,23 @@
 {
   "name": "mlisp-vscode",
   "displayName": "MLisp Language Support",
-  "description": "Syntax highlighting and REPL for MLisp",
+  "description": "Syntax highlighting, REPL, and code evaluation for MLisp - a Lisp dialect implemented in OCaml",
   "version": "0.1.0",
   "publisher": "mlisp",
   "engines": {
     "vscode": "^1.80.0"
   },
   "categories": ["Programming Languages"],
+  "keywords": ["lisp", "mlisp", "scheme", "functional", "ocaml", "repl", "syntax"],
+  "license": "MPL-2.0",
+  "homepage": "https://github.com/somhairle/mlisp#readme",
+  "bugs": {
+    "url": "https://github.com/somhairle/mlisp/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/somhairle/mlisp"
+  },
   "activationEvents": [
     "onStartupFinished"
   ],
