feat(vscode-ext): add automatic syntax file sync before build
Add scripts/sync-syntax.sh that copies syntax files from the shared
package to the vscode-ext package before building.

Update package.json scripts:
- Add sync:syntax script to run the sync script
- Add prebuild:ocaml hook to sync before OCaml build
- Add prebundle hook to sync before JavaScript bundling
- Add prepackage hook to sync before packaging extension

This ensures the syntax files are always up-to-date before any
build or package operation, eliminating the need to manually sync
files between packages/shared/syntax/ and packages/vscode-ext/syntaxes/.

Build flow:
1. npm run build:ocaml → prebuild:ocaml → sync:syntax → dune build
2. npm run bundle → prebundle → sync:syntax → esbuild
3. npm run build → build:ocaml → bundle (both sync)
4. npm run package → prepackage → sync:syntax → vsce package

--- a/packages/vscode-ext/package.json
+++ b/packages/vscode-ext/package.json
@@ -55,12 +55,16 @@
   "scripts": {
     "check": "biome check",
     "fix": "biome check --fix",
+    "sync:syntax": "bash scripts/sync-syntax.sh",
+    "prebuild:ocaml": "npm run sync:syntax",
     "build:ocaml": "dune build",
     "watch:ocaml": "dune build -w",
+    "prebundle": "npm run sync:syntax",
     "bundle": "esbuild _build/default/src/vscode_mlisp.bc.js --bundle --external:vscode --minify --outdir=dist --platform=node --target=node18",
     "watch:bundle": "esbuild _build/default/src/vscode_mlisp.bc.js --bundle --external:vscode --outdir=dist --platform=node --target=node18 --watch",
     "dev": "npm-run-all --parallel watch:ocaml watch:bundle",
     "build": "npm-run-all build:ocaml bundle",
+    "prepackage": "npm run sync:syntax",
     "package": "vsce package --out mlisp-vscode.vsix",
     "install:ext": "code --force --install-extension mlisp-vscode.vsix"
   },
